fix: Fix minor html issues

--- a/index.html
+++ b/index.html
@@ -178,11 +178,11 @@
   <nav>
     <ul>
       <li><a href="#objetivos">Objetivos</a></li>
-      <li><a href="#financiadores">Financiadores</a></li>
       <li><a href="#pesquisadores">Pesquisadores</a></li>
       <li><a href="#publicacoes">Publicações</a></li>
       <li><a href="#repositorios">GitHub</a></li>
       <li><a href="#ferramentas">Ferramentas</a></li>
+      <li><a href="#financiadores">Financiadores</a></li>
     </ul>
   </nav>
   
@@ -208,8 +208,6 @@
       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
       </ol>
       <style>
         .carousel-item {
@@ -232,9 +230,6 @@
         </div>
         <div class="carousel-item">
           <img src="./static/img/caravela_portuguesa_2.png" class="d-block mx-auto w-50" alt="Imagem 5">
-        </div>
-        <div class="carousel-item">
-          <img src="./static/img/heatmap_caravela.png" class="d-block mx-auto w-50" alt="Imagem 6">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -262,7 +257,7 @@
         <li><strong>Miodeli Nogueira Junior</strong> – Pesquisador (Doutorado – UFPB). Especialista em Zoologia, Ecologia e Taxonomia de organismos marinhos.</li>
         <li><strong>Tobias Bernward Bleninger</strong> – Pesquisador (Doutorado – UFPR). Atua na modelagem ambiental e correlação de dados com parâmetros oceanográficos.</li>
         <li><strong>Wagner Machado Nunan Zola</strong> – Pesquisador (Doutorado – UFPR). Foco em algoritmos de alto desempenho e visualização de dados.</li>
-        <li><strong>Alunos de Graduação:</strong> Leonardo da Silva Camargo, Lisiane Reips, Marcos Vinícius Pontarolo.</li>
+        <li><strong>Alunos de Graduação:</strong> Henrique Margotte, Leonardo da Silva Camargo, Lisiane Reips, Marcos Vinícius Pontarolo.</li>
         <li><strong>Alunos de Pós-Graduação:</strong> Bruno Henrique Meyer, Cristina Yassue Morimoto, Heloisa Fernanda Rocha, Lorena Silva do Nascimento.</li>
       </ul>
     </section>
@@ -299,6 +294,12 @@
       </ul>
     </section>
     
+    <section id="ferramentas">
+      <h1>Visualizador de aparecimento de Caravelas Portuguesas</h1>
+      <iframe src="./static/pages/heatmap.html" width="100%" height="600px"></iframe>
+      <!-- <iframe src="./static/pages/anim_heatmap.html" width="100%" height="600px"></iframe> -->
+    </section>
+
     <!-- Seção: Financiadores -->
     <section id="financiadores">
       <h2>Financiadores</h2>
@@ -313,13 +314,6 @@
         </li>
         <li><strong>Instituições Envolvidas:</strong> Universidade Federal do Paraná (UFPR), Universidade Federal do Rio Grande do Norte (UFRN), Universidade Federal da Paraíba (UFPB) e Instituto Federal do Paraná (IFPR).</li>
       </ul>
-    </section>
-    
-
-    <section id="ferramentas">
-      <h1>Visualizador de aparecimento de Caravelas Portuguesas</h1>
-      <iframe src="./static/pages/heatmap.html" width="100%" height="600px"></iframe>
-      <!-- <iframe src="./static/pages/anim_heatmap.html" width="100%" height="600px"></iframe> -->
     </section>
 
   </div>
